# Datasets

./: .gitignore  README.md  auto.py  clear_2.py  main.py  pyproject.toml  revision.xlsx  test.py  标注勘误.xlsx
core/API/: fw_env.py
core/aux_tools/: engine.py  output.py  parse.py  parser.py  utils.py
core/problem/: condition.py  object.py  problem.py
core/solver/: bw_search.py  engine.py  fw_search.py  searcher.py  solver.py
cowork/: cowork.py  tasks.py
data/formalized-problems/: 1584.json  1585.json  1586.json  1587.json  1588.json  1589.json  1590.json  1591.json  1592.json  1593.json  1594.json  1595.json  1596.json  1597.json  1598.json  1599.json  1600.json  1601.json  1602.json  1603.json  1604.json  1605.json  1606.json  1607.json  1608.json  1609.json  1610.json  1611.json  1612.json  1613.json  1614.json  1615.json  1616.json  1617.json  1618.json  1619.json  1620.json  1621.json  1622.json  1623.json  (+8335 more)
data/formalized-problems-ag/: 1584.json  1585.json  config.json
data/preset/: predicate_GDL.json  predicate_GDL_removed.json  theorem_GDL.json  theorem_GDL_removed.json
data/raw-problems/: temp.json  template.json
data/solved/: predicate_parsed.json  theorem_parsed.json
data/test-problems/: 30000.json  30001.json  30002.json  30003.json  30004.json  30005.json  30006.json  30008.json
doc/: contributing.md  cowork.md  formalGeo_documentation.docx  formal_language.xlsx  predicate.md  theorem.md
project/: cowork.md
released/: datasets.json  formalgeo-imo_v1.json  formalgeo7k_v1.json  released.json
tests/: test.py  tests.py
(+62126 files in other folders)
